styles/App.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;800&display=swap');
@import "scrollbar";
@import "colors";

$breakpoint-tablet: 991px;
$breakpoint-mobile: 768px;

* {
  font-family: Roboto sans-serif;
  //font-size: 1.1rem;
  font-weight: 300;
}

html {
  overflow: hidden;
  width: 100vw;
}

body {
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  margin: 0;
  padding: 0;
}

h1 {
  font-size: 2rem !important;
  font-weight: 400;
}

h2 {
  font-size: 1.8rem !important;
  font-weight: 400;
}

h3 {
  font-size: 1.4rem !important;
  font-weight: 400;
}

h4 {
  font-size: 1.3rem !important;
  font-weight: 300;
}

h5 {
  font-size: 1.2rem !important;
  font-weight: 300;
}

h6 {
  font-size: 1.1rem !important;
  font-weight: 300;
}

.Button {
  align-self: center;
  background: $color-pure;
  border: 1px solid $color-main;
  justify-content: center;
  padding: .75rem 3rem;
  outline: none;

  &:hover, &:focus {
    background: $color-main;
    color: $color-pure;
  }
}

@mixin input-element {
  background-color: $color-inactive;
  border: 1px solid $color-inactive;
  outline: none;

  &:hover {
    border: 1px solid $color-active;
  }

  &:focus {
    border: 1px solid $color-active;
    background-color: $color-active;
  }
}

.Input {
  //align-self: center;
  padding: .75em 3rem .75rem .5rem;
  @include input-element;
}

.Select {
  padding: .75em 3rem .75rem .5rem;
  @include input-element;

  option {
    background-color: $color-inactive;
  }
}

@mixin grid-center {
  align-items: center;
  justify-items: center;
}

.StationLabel {
  background: $color-inactive;
  padding: .4rem .6rem;
  grid-gap: .2rem 1rem;
  display: inline-grid;
  align-items: center;
  width: 30ch;
  outline: none;

  &:hover, &:focus, &.selected {
    background: $color-active;
  }

  .StationName {
    font-size: (30em/20);
    font-weight: 400;
    grid-column: 1;
    grid-row: 1;
    word-break: break-word;
  }

  .StationPlace {
    grid-column: 1;
    grid-row: 2;
  }

  svg {
    grid-column: 2;
    grid-row: span 2;
    justify-self: right;
  }
}

.Card {
  background: $color-main;
  color: $color-normal;
  display: inline-grid;
  grid-template-areas: "value"
                       "description";
  grid-template-columns: 100%;
  @include grid-center;
  padding: 1rem 3rem 1.5rem 3rem;
  max-width: 15ch;
  min-width: 15ch;
  min-height: 8em;
  max-height: 8em;

  * {
    font-weight: 400;
  }

  .value {
    grid-area: value;
    font-size: 4em;
    max-width: 100%
  }

  .unit {
    font-size: 0.7em;
  }

  .description {
    grid-area: description;
    overflow-wrap: break-word;
  }

  @media screen and (max-width: $breakpoint-mobile) {
    & {
      grid-template-areas: "description value";
      grid-template-columns: auto;
      min-width: 100%;
      box-sizing: border-box;
      padding: 1em 0.2em;
      min-height: 4em;
    }

    .value {
      justify-self: end;
      font-size: 2em;
    }

    .description {
      justify-self: start;
    }
  }
}

.Avatar-container {
  outline: none;

  .Avatar {
    display: inline-grid;
    text-align: center;
    @include grid-center;

    img {
      height: 10em;
      border-radius: 50%;
    }

    .name {
      padding-top: 0.3em;
      font-size: 1.3em;
      font-weight: 400;
    }
  }
}

.NavBar {
  width: 100%;
  z-index: 1;

  nav {
    margin: 0 auto;
    background: $color-main;
    color: $color-active;
    padding: .5em 1em;

    display: grid;
    grid-template-columns: auto 1fr auto;
    @include grid-center;

    .logo {
      height: 35px;
      grid-column: 1;
      grid-row: 1;
    }

    *:hover, *:focus {
      font-weight: 400;
    }

    a {
      text-decoration: none;
      color: inherit;

      &.active {
        color: $color-pure;
        font-weight: 400;
      }
    }

    .menu {
      grid-column: 3;
      display: flex;
      align-items: center;

      a {
        padding: .5em;
      }
    }

    svg {
      width: 40px;
    }

    .Avatar-container {
      .dropdown-menu {
        background: $color-active;
        color: $color-main;
        position: absolute;
        list-style: none;
        margin-top: .55rem;
        padding: 0;
        right: 0;
        z-index: 1;
        transform: rotateX(-90deg);
        transform-origin: top center;
        transition: 240ms all ease-in-out;
        opacity: 0.3;

        li {
          padding: 0.4em 0.2em;
        }
      }

      &:hover, &:focus-within {
        .dropdown-menu {
          opacity: 1;
          transform: rotateX(0);
        }
      }
    }

    .Avatar {
      grid-gap: 0.2em;
      height: 100%;
      padding-left: 1em;

      img {
        height: 40px;
        grid-row: 1;
      }

      .name {
        grid-row: 1;
        font: inherit;
      }
    }

    #nav-toggle, .burger-menu {
      display: none;
    }

    @media only screen and (max-width: $breakpoint-mobile) {
      .Avatar-container {
        & > .dropdown-menu {
          width: 100%;
          text-align: center;

          li {
            margin-top: 0.2em;
            padding: 0.5em;
          }
        }

        .Avatar {
          padding: 0;
        }
      }

      .burger-menu {
        display: inline-block;
        grid-column: 3;
      }

      .logo {
        grid-column: span 2;
      }

      .menu {
        display: none;
      }

      #nav-toggle:checked ~ .menu {
        display: grid;
        align-self: center;
        grid-row: 2;
        padding-top: 1em;
        width: 100%;
        grid-column: span 2;
        @include grid-center;
      }
    }
  }
}

.Chart {
  align-items: center;
  display: grid;
  @include grid-center;
  grid-template-columns: 1fr 0.5fr;

  #chart-area {
    grid-row: 1;
    grid-column: 1;
    width: 90%;
  }

  #stat {
    grid-row: 1;
    grid-column: 2;
    height: 100%;

    table {
      height: 80%;
    }

    table td {
      &:nth-child(2) {
        text-align: right;
      }

      &:nth-child(1) {
        text-align: left;
      }
    }

    .bold {
      font-weight: 900;
      font-size: 1.3em;
    }
  }

  @media only screen and (max-width: $breakpoint-tablet) {
    #chart-area {
      grid-column: span 2;
    }
    #stat {
      margin-top: 2em;
      grid-row: 2;
      grid-column: span 2;
    }
  }
}

.StationInfo {
  display: grid;
  @include grid-center;
  text-align: center;

  #header {
    grid-row: 1;

    span {
      display: inline-block;
      font-size: 0.6em;
      margin-left: 1ch;
    }
  }


  #chart {
    grid-row: 2;
    width: 100%;
  }

  #stats {
    margin-top: 2em;
    grid-row: 3;
    display: flex;
    flex-direction: row;
    max-width: 100%;
    overflow-x: auto;

    & > * {
      margin-left: 1ch;
      margin-bottom: 1ch;
    }

    @media screen and (max-width: $breakpoint-mobile) {
      flex-wrap: wrap;
      & > * {
        margin-left: 0;
      }
    }
  }
}

.StationList {
  display: inline-flex;
  flex-direction: column;
  height: 100%;
  background: $color-inactive;
}

.Page {
  height: 100vh;
  width: 100vw;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 3.5em auto;

  .NavBar {
    grid-row: 1;
  }

  .main-content {
    grid-row: 2;
    overflow: hidden;
  }
}

.UserHome {
  overflow: auto;
  height: 100%;
}

.Compare {
  display: grid;
  grid-template-columns: auto 1fr;
  height: 100%;

  #left {
    grid-column: 1;
    height: 100%;
    overflow-y: auto;
    overflow-x: hidden;
  }

  #selector {
    display: none;
  }

  #right {
    grid-column: 2;
    height: 100%;
    overflow-y: auto;
    text-align: center;

    &>.totalStats {
      display: grid;
      grid-template-columns: repeat(auto-fill, minmax(24ch, 1fr));
      grid-auto-rows: max-content;
      justify-items: center;
      text-align: center;
      margin-top: 1ch;
      grid-row-gap: 1ch;
      grid-column-gap: 1ch ;
    }
  }

  @media only screen and (max-width: $breakpoint-tablet) {
    & {
      grid-template-columns: 1fr;
    }
    #selector {
      grid-row: 1;
      display: inherit;;
    }
    #left {
      position: relative;
      grid-column: 1;
      grid-row: 1;
      left: -100%;
      z-index: 1;
      transition: 240ms all ease-in-out;

      &.active {
        left: 0;
      }
    }
    #right {
      grid-row: 1;
      grid-column: 1;
    }
  }

  @media only screen and (max-width: $breakpoint-mobile) {
    #right>.totalStats {
      grid-template-columns: 1fr;
    }
  }
}

